--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,11 @@
         "psr-4": { "Omnipay\\NetBanx\\" : "src/" }
     },
     "require": {
-        "omnipay/common": "~2.0|~3.0"
+        "ext-simplexml": "*",
+        "omnipay/common": "~3.0"
     },
     "require-dev": {
-        "omnipay/tests": "~2.0|~3.0"
+        "omnipay/tests": "~3.0"
     },
     "extra": {
         "branch-alias": {
